# consensus

./: bam_server.py  extract_bam.sh  extract_mates.py  file_server.py  filter_bams_for_overlap.sh  generate_viewer.py  pyproject.toml
allelescope/: README.md  bam_server.py  baq_filter.py  build_variant_browser.py  build_variant_browser.sh  extract_bam.py  extract_mates.py  file_server.py  flipped.bam  generate_viewer.py  prepare_bam.sh  process_variant.py  scankmer.py  select_baq.py  tag_indel.py
allelescope/static/: index.html
allelescope/static/css/: styles.css
allelescope/static/js/: alleleFilter.js  config.js  filters.js  igv.js  manualVariants.js  navigation.js  panes.js  readSelection.js  state.js  tabs.js  trackClick.js  utils.js  viewer.js
allelescope/templates/: base.html  config.js.j2  viewer.html.j2
allelescope/templates/components/: data_embed.html  filter_toast.html  header.html  left_pane.html  manual_jump.html  read_selection.html  right_pane.html  scripts.html  variant_tabs.html  view_options.html
allelescope/templates/filters/: baq_filters.html  exclude_filters.html  filter_accordion.html  include_filters.html  value_filters.html
static/css/: styles.css
static/js/: viewer.js
templates/: viewer.html.j2
